# tulsa-rollercoaster-camera

./: .gitignore  CMakeLists.txt  OpenCVDeviceEnumerator.LICENSE  README.md  config.cpp  install.sh
res/: config.ui
src/: app_data.h  arduino_util.cpp  arduino_util.h  callbacks.hpp  config.cpp  config.cpp.bak  get_callbacks.cpp  logging.cpp  logging.h  main.cpp  mask.cpp  mask.h  post_callbacks.cpp  processing.cpp  processing.h  rollercoaster.cpp  settings.cpp  settings.h  smmServer.cpp  smmServer.hpp  update.cpp
src/mg/: mongoose.h
